--- a/upload.html
+++ b/upload.html
@@ -9,12 +9,14 @@
     <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <form action="test.php" method="post">
-        <fieldset>
-            <legend>Carregar uma nova foto</legend>
-            <input type="file" name="file" id="ifile" required>
-            <input type="submit" name="upload" value="Carregar" class="button">
-        </fieldset>
-    </form>
+    <div class="content">
+        <form action="test.php" method="post">
+            <fieldset>
+                <legend>Carregar uma nova foto</legend>
+                <input type="file" name="file" id="ifile" required>
+                <input type="submit" name="upload" value="Carregar" class="button">
+            </fieldset>
+        </form>
+    </div> 
 </body>
 </html>
