--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@
             <h2>Intranet</h2>
         </hgroup>
         <nav>
-            <a href="contact.html" class="button">Contato</a>
-            <a href="login.html" class="button">Área Restrita</a>
+            <a href="history.html" class="button" target="content">Home</a>
+            <a href="contact.html" class="button" target="content">Contato</a>
+            <a href="login.html" class="button" target="content">Área Restrita</a>
         </nav>
     </header>
     <main>
         <section>
-            <h1>História da Mello System</h1>
-        
-            <p>A Mello System surgiu apenas porque eu <strong>(Vinicius Mello dos Santos)</strong> decidi dar um nome para os trabalhos que eu venho desenvolvendo durante meus estudos. Enfim, é algo que não foi implementado mas vem criando forma com o passar do tempo. Ainda não sei se algum dia virá ser algum projeto real e concreto mas seguirei com este nome até que eu venha mudar de idéia.</p>
-            <p>Com a criação do meu servidor residêncial decidi iniciar alguns projetos para deixar minha casa com cara de empresa. O que tomou ainda mais força em 2020, com a pandemia do Corona Virus. Pois neste momento tanto eu como minha esposa passamos a trabalhar 100% do tempo em home office, tornando nosso lar um local multi-uso. O que vem sendo melhorado cada vez mais. Misturando tecnologia, lazer, meio ambiente, entre outras coisas para tornar esta casa um lugar onde tudo pode ser realizado.</p>
-            <p>Concluindo, vamos ver o que meus estudos e idéias irão proporcionar. Tudo isso, me preparando para qualquer situação profissional e/ou hobby.</p>
+            <iframe src="history.html" frameborder="0" name="content">
+                <p>Seu browser não é compatível com este recurso</p>
+            </iframe>
         </section>
         <aside>
             <a href="https://www.facebook.com/FisioterapeutaMilenePaula/" target="_blank"><img src="image/milene_fisio_180.png" alt="Milene Paula Fisioterapeuta"></a>
