--- a/login.html
+++ b/login.html
@@ -9,19 +9,21 @@
     <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <form action="home.html" method="post">
-        <fieldset>
-            <legend>Área Restrita</legend>
-            <label for="isuer">Usuário</label>
-            <input type="text" name="user" id="isuer" autocomplete="username" placeholder="Entre com seu usário"><br>
-            <label for="ipwd">Senha</label>
-            <input type="password" name="pwd" id="ipwd" autocomplete="current-password" placeholder="Entre com sua senha">
-        </fieldset>
-        <p><a href="#">Esqueci a senha</a></p>
-        <p>
-            <input type="submit" name="enter" value="Entrar" class="button">
-            <input type="submit" name="register" value="Cadastrar" class="button">
-        </p>
-    </form>
+    <div class="content">
+        <form action="home.html" method="post" target="_blank">
+            <fieldset>
+                <legend>Área Restrita</legend>
+                <label for="isuer">Usuário</label>
+                <input type="text" name="user" id="isuer" autocomplete="username" placeholder="Entre com seu usário"><br>
+                <label for="ipwd">Senha</label>
+                <input type="password" name="pwd" id="ipwd" autocomplete="current-password" placeholder="Entre com sua senha">
+            </fieldset>
+            <p><a href="#">Esqueci a senha</a></p>
+            <p>
+                <input type="submit" name="enter" value="Entrar" class="button">
+                <input type="submit" name="register" value="Cadastrar" class="button">
+            </p>
+        </form>
+    </div>
 </body>
 </html>
