--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
                     <li><a href="paysheet.html" target="content">Holerite</a></li>
                 </ul>
             </nav>
-            <iframe src="upload.html" frameborder="0" name="content">
+            <iframe src="upload.html" frameborder="0" name="content" scrolling="no">
                 <p>Seu browser não é compatível com este recurso</p>
             </iframe>
         </div>
