--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <section>
-            <iframe src="history.html" frameborder="0" name="content">
+            <iframe src="history.html" frameborder="0" name="content" scrolling="no">
                 <p>Seu browser não é compatível com este recurso</p>
             </iframe>
         </section>
